# polar-pfc-master_active-crystel

./: Dockerfile  README.md  docker-compose.yml
code/: AlgLibTools.h  CMakeLists.txt  DOFVectorBase.hpp  Element.hpp  Math.hpp  Mesh.hpp  Output.hpp  ParticleWriter.hh  ProblemSHTNS.hpp  Shtns.hpp  coefficients.hpp  container.hpp  converter.py  copy_all.py  flags.hpp  generate.py  generate_director.py  generate_mesh_director.py  generate_mesh_velocity.py  generate_time_series.py  initial.hpp  kdtree_nanoflann.h  mean_flow.py  observer.hpp  paraview_filter.py  paraview_filter.templ.py  paraview_script.py  pca.py  plot_director.py  plot_mean_p.py  plot_order_parameter.py  plot_velocity.py  polar_pfc2.cc  polar_pfc2.h  process_num_defects.py  qtensor.cpp  run.templ.sh  run_paraview_script.py  tools.hpp
code/cmake/: FindALGLib.cmake  SHTNS.cmake
code/init/: example.json  param.templ.json  radius100.json
code/io/: FileWriter.hpp  PvdWriter.hpp  VtkTimeseriesWriter.cpp  VtkTimeseriesWriter.hpp  VtkWriter.cpp  VtkWriter.hpp
code/utility/: Filesystem.cpp  Filesystem.hpp  String.hpp  Timer.cpp  Timer.hpp
